--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ svg {
 .hihat-track {
   display: flex;
   align-items: center;
-  width: 70%;
+  width: 90%;
   justify-content: space-between;
   margin-top: 5rem;
 }
@@ -71,7 +71,7 @@ svg {
 
 .controls {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex: 1;
   margin: 0 2rem;
