--- a/style.css
+++ b/style.css
@@ -110,6 +110,29 @@ select {
   background: rgb(182, 182, 182);
 }
 
+.tempo {
+  margin: 3rem;
+  width: 30%;
+}
+
+.tempo-slider {
+  outline: none;
+  padding: 0.2rem;
+  appearance: none;
+  margin: 1rem 0;
+  width: 100%;
+  position: relative;
+  background: rgb(88, 88, 88);
+  cursor: pointer;
+  border-radius: 1rem;
+}
+
+.tempo p {
+  font-size: 1.5rem;
+  margin: 2rem;
+  text-align: center;
+}
+
 @keyframes playTrack {
   from {
     transform: scale(1);
